examples/test/testpolicy10035.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10035
  namespace: namespace322
spec:
  podSelector:
    matchLabels:
      key47: value9
      key32: value44
      key18: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value20
          key41: value20
      podSelector:
        matchLabels:
          key49: value12
